Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6413682/T6413682.out
T6413682.java:11:2: compiler.err.cannot.create.array.with.type.arguments
1 error
